# math

./: CMakeLists.txt
src/sw/math/: axis_angle.cpp  axis_angle.hpp  axis_angle.ipp  matrix.cpp  matrix.hpp  matrix.ipp  simd.hpp  utils.cpp  utils.hpp  vector.cpp  vector.hpp  vector.ipp
